--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
+<header class="cabecalho">
     <img class="cabecalho-imagem" src="./img. ccs/logo.png" alt="logo do Colégio Dr. Claudino dos Santos">
 
 <h1> Colégio Dr Claudino dos Santos</h1>
     <u1>
-        <li>Alunos</li>
-        <li>Biblioteca</li>
-        <li>Cantina</li>
+        <li class="cabecalho-lista-items"> Alunos</li>
+        <li class="cabecalho-lista-items"> Biblioteca</li>
+        <li class="cabecalho-lista-items"> Cantina</li>
     </u1>
 </header>
 </html>
