--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img. ccs/logo.png" alt="logo do Colégio Dr. Claudino dos Santos">
+    <img class="cabecalho-imagem" src="./img/logo.png" alt="logo do Colégio Dr. Claudino dos Santos">
 <h1> Colégio Dr Claudino dos Santos</h1>
     <u1>
         <li class="cabecalho-lista-items"> Alunos</li>
@@ -16,14 +16,15 @@
         <li class="cabecalho-lista-items"> Cantina</li>
     </u1>
 </header>
-<section>
-    <h2>Sobre o Colégio</h2>
-    <p> A Colégio Estadual Dr Claudino dos Santos está localizada na Rua João Ribeiro Fonseca, 175 Ipiranga - PR. 
-    <p> A presente dissertação tem como objeto de estudo a reconstrução histórica do Grupo Escolar Dr. Claudino dos Santos, situado no município de Ipiranga-PR, sendo fruto de pesquisa do Programa de Pós-Graduação em Educação Mestrado e Doutorado, na Linha de Pesquisa de Políticas e História da Educação, da Universidade Estadual de Ponta Grossa - PR. O Grupo Escolar Dr. Claudino dos Santos foi a primeira escola pública do Estado, em Ipiranga – PR, e após cem anos continua sendo a única escola pública estadual na sede deste município.
-         Especificamente, busca-se identificar o contexto histórico do projeto de criação dos grupos escolares no Brasil republicano, compreender a origem do projeto de criação dos grupos escolares do Paraná e analisar a cidade de Ipiranga e a criação do Grupo Escolar Dr. Claudino dos Santos, evidenciando os seus determinantes que influenciaram a instrução pública do Estado.
+<section class="escola">
+ <h2 class="escola-titulo"> Sobre o Colégio</h2>
+    <p class="escola-texto-um"> A Colégio Estadual Dr Claudino dos Santos está localizada na Rua João Ribeiro Fonseca, 175 Ipiranga - PR. 
+    <p class="escola texto-dois"> A presente dissertação tem como objeto de estudo a reconstrução histórica do Grupo Escolar Dr. Claudino dos Santos, situado no município de Ipiranga-PR, sendo fruto de pesquisa do Programa de Pós-Graduação em Educação Mestrado e Doutorado, na Linha de Pesquisa de Políticas e História da Educação, da Universidade Estadual de Ponta Grossa - PR. O Grupo Escolar Dr. Claudino dos Santos foi a primeira escola pública do Estado, em Ipiranga – PR, e após cem anos continua sendo a única escola pública estadual na sede deste município.
+        Especificamente, busca-se identificar o contexto histórico do projeto de criação dos grupos escolares no Brasil republicano, compreender a origem do projeto de criação dos grupos escolares do Paraná e analisar a cidade de Ipiranga e a criação do Grupo Escolar Dr. Claudino dos Santos, evidenciando os seus determinantes que influenciaram a instrução pública do Estado.
          Embora a pesquisa tenha como objeto de estudo um único grupo escolar, isso não significa que análise seja de forma isolada, pois a captura do contexto histórico se inter-relaciona e se compreende dentro de uma análise de totalidade e interlocução aos demais contextos. Quanto à postura metodológica, o método a ser utilizado será o materialismo histórico-dialético, que tem como finalidade perceber as contradições presentes no movimento dialético do objeto de pesquisa. Conforme a base epistemológica utilizada, as categorias que permearam a pesquisa foram, a contradição, a totalidade e a ideologia, por meio da pesquisa bibliográfica documental para a compreensão histórica desta instituição escolar pública centenária.
          A pesquisa tem um caráter documental e bibliográfico. O recorte temporal da pesquisa compreende o período de 1889 a 1914, levando em consideração, no início do período em estudo, os acontecimentos do final do Império período em que os ideais republicanos estão se consolidando no Brasil e, assim o advento da Proclamação da República do país, e um dos principais projetos de educação neste período, é o projeto da criação dos grupos escolares, no Brasil surgiu em 1894, respectivamente em 1903 no Paraná, para se implantar em Ipiranga, em 1914, no sertão paranaense.
          A dissertação está dividida em três capítulos: A criação dos grupos escolares no Brasil, a consolidação da classe burguesa por meio da educação e suas contradições, são abordadas as relações entre os ideais liberais, o movimento republicano, a política no período de transição e os embates ideológicos dos grandes grupos na disputa pelo poder na República e, por fim a criação dos grupos escolares no Brasil. O segundo capítulo intitulado O Paraná Republicano e a Educação o movimento republicano no Paraná, a relação política entre o Estado e os fazendeiros. O terceiro capítulo intitulado Projeto Republicano de educação na cidade de Ipiranga – PR: o Grupo Escolar Dr. Claudino dos Santos, abordou como os princípios liberais de liberdade, igualdade e laicidade do Estado foram inseridos no Grupo Escolar Dr. Claudino dos Santos, por meio das reformas educacionais do estado do Paraná, produto do contexto econômico e da representação política da região de Ipiranga neste período. Foram contextualizados os fatores que condicionaram as reformas educacionais, bem como a forte influência da maçonaria e seu pensamento positivista na escola pública de Ipiranga.
          A presente pesquisa se torna relevante, pois busca a preservação da memória escolar da região, além de contribuir com a produção do conhecimento na área de História da Educação, somando as pesquisas do Grupo de Pesquisa HISTEDBR- Campos Gerais. </p>
-</section>
+<img class="escola-imagem" src="./img/livros.png" alt="livros.do" >
+        </section>
 </html>
