--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
  </section>
 <section>
 <h2 class="alunos-titulo"> Conhecendo os alunos </h2>
+<div class="estudante-div">
 <img class="aluno-um" src="./img/axolote.png">
+<h3> Axolote</h3>
+<img class="estudante-icone" src= "./img/instagram.png">
+<img class="estudante-icone" src= "./img/twitter.png">
+<img class="estudante-icone" src= "./img/twitch.png">
+</div>
+<img class="aluno-dois" src="./img/billy.png">
+<h3> Billy</h3>
+<img class="estudante-icone" src= "img/discord.png">
+<img class="estudante-icone" src= "img/reddit.png">
+<img class="estudante-icone" src= "img/facebook.png">
+
 </section>
 </html>
