--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <header class="cabecalho">
     <img class="cabecalho-imagem" src="./img/logo.png" alt="logo do Colégio Dr. Claudino dos Santos">
-<h1> Colégio Dr Claudino dos Santos</h1>
+<h1> Colégio Dr Claudino dos Santos </h1> 
     <u1>
         <li class="cabecalho-lista-items"> Alunos</li>
         <li class="cabecalho-lista-items"> Biblioteca</li>
@@ -28,18 +28,37 @@
  </section>
 <section>
 <h2 class="alunos-titulo"> Conhecendo os alunos </h2>
+
+<div class="estudantes-todos">
+
 <div class="estudante-div">
-<img class="aluno-um" src="./img/axolote.png">
-<h3> Axolote</h3>
-<img class="estudante-icone" src= "./img/instagram.png">
+<img class="aluno-um" src="./img/ReiGelado.png">
+<h3> Rei Gelado</h3>
+<a href="https://pt.wikipedia.org/wiki/Instagram" target="_blank"> <img class="estudante-icone" src= "./img/instagram.png"> </a>
 <img class="estudante-icone" src= "./img/twitter.png">
 <img class="estudante-icone" src= "./img/twitch.png">
 </div>
-<img class="aluno-dois" src="./img/billy.png">
+<div class="estudante-div">
+<img class="aluno-um" src="./img/billy.png">
 <h3> Billy</h3>
 <img class="estudante-icone" src= "img/discord.png">
 <img class="estudante-icone" src= "img/reddit.png">
 <img class="estudante-icone" src= "img/facebook.png">
+</div>
 
+<div class="estudante-div">
+<img class="aluno-um" src="./img/PickleRick.png">
+<h3> Pickle Rick</h3>
+<img class="estudante-icone" src= "./img/instagram.png">
+<img class="estudante-icone" src= "./img/twitter.png">
+<img class="estudante-icone" src= "./img/twitch.png">
+</div>
+<div class="estudante-div">
+<img class="aluno-um" src="./img/Jake.png">
+<h3> Jake</h3>
+<img class="estudante-icone" src= "img/discord.png">
+<img class="estudante-icone" src= "img/reddit.png">
+<img class="estudante-icone" src= "img/facebook.png">
+</div>
 </section>
 </html>
